css/responsive-style.css
/* ... */
#feels-like {
    font-size: 1.4em;
    font-weight: 300;
    margin-bottom: 18px;
    margin-top: -5px;
    color: #777;
}

#feels-like span {
    font-weight: 700;
}

#feels-like span.wc {
    color: #090082;
}

#feels-like span.hi {
    color: #c81c00;
}

#feels-like span.hi.danger {
    color: #7e007e;
}

#feels-like span.hi.danger::after {
    content: '\26A0';
}

#others {
    clear: both;
}

ul#others {
    list-style: none;
    margin: 0 auto;
    padding: 0;
    max-width: 350px;
}

#others li {
    width: 50%;
    float: left;
    font-weight: 600;
    padding: 2px 0;
}

#others span.title {
    font-weight: 300;
    color: #777;
}

.updated-time,
.intro-text {
    clear: both;
    font-size: 0.7em;
    padding-top: 3px;
    color: #777;
}

.updated-time a {
    color: #777;
}

#currentwx .updated-time {
    margin-bottom: 2em;
    padding-top: 1em;
}

/* === Advisories & Alerts === */

#advisories {
    margin-bottom: 2em;
}

#advisories ul {
    list-style: none;
    margin: 0 0 20px 0;
    padding: 0;
}

#advisories li.alert {
    border: 1px solid #DDD;
    background-color: #EEE;
    color: #000;
    border-radius: 0.5em;
    padding: 10px;
    display: block;
    margin-bottom: 10px;
}

#advisories ul li span.alert-name {
    font-weight: bold;
    display: block;
    font-size: 1.2em;
}

#advisories ul li span.alert-areas {
    font-size: 0.8em;
}

#advisories ul li span.alert-timing {
    display: block;
    font-size: 0.8em;
    font-weight: bold;
    margin-top: 0.4em;
}

#advisories li.alert ul {
    font-size: 0.85em;
    padding: 10px;
    margin-top: 10px;
    border: 1px solid #DDD;
    background-color: #FFF;
    color: #000;
}

#advisories li.alert ul {
    display: none;
}

#advisories li[class*="-watch"] {
    border-color: rgb(255, 194, 5);
    background-color: rgb(255, 236, 69);
    color: #000;
}

#advisories li[class*="-advisory"] {
    border-color: rgb(198, 151, 4);
    background-color: rgb(255, 176, 14);
    color: #000;
}

#advisories li[class*="-warning"] {
    border-color: rgb(128, 0, 0);
    background-color: rgb(192, 0, 0);
    color: #FFF;
}

#advisories span.danger::before {
    content: '\26A0';
    padding-right: 5px;
}

#advisories span.danger {
    font-weight: bold;
}

#advisories li.alert button.alert-expand {
    background: none;
    border: none;
    color: inherit;
    cursor: pointer;
    width: 100%;
    text-align: left;
    padding: 0;
    display: block;
    font: inherit;
}

#advisories li.alert button.alert-expand:hover {
    opacity: 0.85;
}

/* === Alert Modal === */

#alert-modal {
    max-width: 600px;
    width: 90%;
    padding: 2em;
    border: 1px solid #DDD;
    border-radius: 0.5em;
    background: #FFF;
    color: #000;
    margin: auto;
}

#alert-modal::backdrop {
    background: rgba(0, 0, 0, 0.5);
}

#alert-modal h3 {
    margin-top: 0;
    padding-right: 2em;
}

#alert-modal #modal-description {
    margin: 1em 0;
    line-height: 1.4;
}

#alert-modal #modal-instructions {
    margin: 1em 0;
    padding: 0.5em;
    border: 1px solid #DDD;
    background-color: #F5F5F5;
}

#alert-modal .modal-close {
    position: absolute;
    top: 0.5em;
    right: 0.75em;
    background: none;
    border: none;
    font-size: 1.5em;
    cursor: pointer;
    color: inherit;
    padding: 0;
    line-height: 1;
}

#alert-modal .modal-close:hover {
    opacity: 0.7;
}

/* === Forecast === */

#forecast ul {
    list-style: none;
    margin: 0;
    padding: 20px 0 0 0;
}

#forecast ul li {
    padding: 0 0 20px 0;
    font-size: 0.9em;
    line-height: 1.4em;
}

#forecast .day {
    font-weight: 600;
    font-family: var(--chswx-heading-font-family);
    text-transform: uppercase;
    letter-spacing: 0.1em;
    display: block;
    color: #444;
    font-size: 1.05em;
}

#forecast .fail {
    text-align: center;
    width: 70%;
    display: block;
    margin: 32px auto;
}

/* === Footer === */

#footer {
    background-color: #444;
    padding: 10px 10px 20px 10px;
    color: #CCC;
    margin-top: 20px;
    clear: both;
}

#footer-wrapper {
    max-width: 768px;
    margin: 0 auto;
    background: linear-gradient(rgba(68, 68, 68, 0.5), rgba(68, 68, 68, 0.5)), url(../assets/wordmark-oneline.svg);
    background-repeat: no-repeat;
    background-position: top center;
    background-size: 16rem;
    padding-top: 1.5rem;
    margin-top: 10px;
    text-align: center;
}

#footer-wrapper p {
    font-size: 0.8em;
    font-weight: 300;
}

#footer-wrapper h2 {
    color: #EEE;
    margin: 10px auto;
}

#footer-wrapper h3 {
    font-family: var(--chswx-heading-font-family);
    font-weight: 600;
    text-transform: uppercase;
    font-size: 0.9rem;
    letter-spacing: 0.2em;
    margin-bottom: -0.5em;
}

#footer-wrapper ul {
    list-style: none;
    padding: 0px;
    font-size: 0.7rem;
}

#footer-wrapper ul li {
    padding: 0px;
    margin: 0px;
    display: inline-block;
    padding-left: 10px;
}

#footer-wrapper ul li:first-child {
    padding-left: 0px;
}

#footer-wrapper ul li::after {
    padding-left: 10px;
    content: '\2022'
}

#footer-wrapper ul li:last-child::after {
    content: '';
    padding-left: 0px;
}

#footer a {
    color: #EEE;
    font-weight: normal;
}

#footer a:hover,
#footer a.active {
    text-decoration: underline;
}

#footer .colophon a {
    font-weight: bold;
}

#footer-wrapper .disclaimer {
    font-size: 0.7rem;
    border-top: 1px solid #777;
    padding-top: 10px;
}

/* === Content Blocks === */

article ul li {
    padding-bottom: 10px;
    list-style: square;
    line-height: 1.4em;
    font-size: 0.9em;
}

article.full-post header.entry-header {
    margin-bottom: 20px;
}

.wp-block-embed-twitter {
    margin: 0 auto 1em auto;
}

.wp-block-embed-twitter .wp-block-embed__wrapper {
    max-width: 535px;
    margin: auto;
}

.liveblog-entry-content img {
    max-width: 100%
}
/* ... */

